Fix horizontal alignment issue with the text and icon in the nav bar :

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
 #title {
     text-transform: uppercase;
     font-size: 1.75em;
+    height: 100%;
 }
 
 nav {
